k8s/apps/default/autobrr/autobrr-new/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name autobrr-new
  labels:
    app: *name
spec:
  selector:
    matchLabels:
      app: *name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: *name
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      hostname: *name
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups: [10000]
        seccompProfile: { type: RuntimeDefault }
      volumes:
        - name: tmp
          emptyDir: {}
        - name: config
          persistentVolumeClaim:
            claimName: autobrr-new
        - name: scripts
          configMap:
            name: autobrr-scripts
            defaultMode: 0775
      containers:
        - name: autobrr
          image: ghcr.io/autobrr/autobrr:v1.64.0@sha256:47bbccb5ce30c4c587356ece792461126dca9446af34cf1ebaddf461a68c5d61
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
          ports:
            - containerPort: 80
              name: web
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 256Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: config
              mountPath: /config
            - name: scripts
              mountPath: /scripts
          livenessProbe:
            httpGet:
              path: /api/healthz/liveness
              port: 80
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/healthz/readiness
              port: 80
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
