k8s/apps/default/autobrr/autobrr-new/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: &name autobrr-new
  name: *name
spec:
  selector:
    app: *name
  type: ClusterIP
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: bt
      port: 50413
      targetPort: 50413
      protocol: TCP
